--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.0",
     "react": "^19.0.0",
+    "react-currency-flags": "^0.1.2",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1"
   },
